; ModuleID = '/home/carl/AnghaBench/tmux/extr_utf8.c_utf8_width.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_utf8.c_utf8_width.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"Unicode %04lx, wcwidth() %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @utf8_width to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @utf8_width(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i32 @wcwidth(i64 %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  %11 = icmp sgt i32 %10, 255
  br i1 %11, label %12, label %20

12:                                               ; preds = %9, %1
  %13 = load i64, i64* %3, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @log_debug(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i64 %13, i32 %14)
  %16 = load i32, i32* %4, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  store i32 1, i32* %2, align 4
  br label %22

19:                                               ; preds = %12
  store i32 -1, i32* %2, align 4
  br label %22

20:                                               ; preds = %9
  %21 = load i32, i32* %4, align 4
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %20, %19, %18
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @wcwidth(i64) #1

declare dso_local i32 @log_debug(i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
